--- a/docroot/profiles/custom/stanford_profile/config/sync/core.entity_form_display.node.stanford_person.default.yml
+++ b/docroot/profiles/custom/stanford_profile/config/sync/core.entity_form_display.node.stanford_person.default.yml
@@ -6,7 +6,22 @@ dependencies:
     - field.field.node.stanford_person.body
     - field.field.node.stanford_person.layout_builder__layout
     - field.field.node.stanford_person.stanford_intranet__access
+    - field.field.node.stanford_person.su_casbs_cs_year
+    - field.field.node.stanford_person.su_casbs_current_affiliation
+    - field.field.node.stanford_person.su_casbs_faculty_fellow_year
+    - field.field.node.stanford_person.su_casbs_feature_people
+    - field.field.node.stanford_person.su_casbs_feature_people_text
+    - field.field.node.stanford_person.su_casbs_fellowship_affili
+    - field.field.node.stanford_person.su_casbs_fellowship_year
+    - field.field.node.stanford_person.su_casbs_field_discipline
+    - field.field.node.stanford_person.su_casbs_person_bio
+    - field.field.node.stanford_person.su_casbs_person_book_links
     - field.field.node.stanford_person.su_casbs_person_id
+    - field.field.node.stanford_person.su_casbs_person_journal_links
+    - field.field.node.stanford_person.su_casbs_practitioner_year
+    - field.field.node.stanford_person.su_casbs_profile_picture
+    - field.field.node.stanford_person.su_casbs_ra_year
+    - field.field.node.stanford_person.su_casbs_visiting_scholar_year
     - field.field.node.stanford_person.su_metatags
     - field.field.node.stanford_person.su_person_academic_appt
     - field.field.node.stanford_person.su_person_admin_appts
@@ -34,11 +49,13 @@ dependencies:
     - field.field.node.stanford_person.su_person_telephone
     - field.field.node.stanford_person.su_person_type_group
     - field.field.node.stanford_person.su_shared_tags
+    - image.style.thumbnail
     - node.type.stanford_person
   module:
     - allowed_formats
     - change_labels
     - field_group
+    - image
     - layout_paragraphs
     - link
     - media_library
@@ -173,11 +190,142 @@ content:
     settings:
       display_label: true
     third_party_settings: {  }
+  su_casbs_cs_year:
+    type: entity_reference_autocomplete
+    weight: 57
+    region: content
+    settings:
+      match_operator: CONTAINS
+      match_limit: 10
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+  su_casbs_current_affiliation:
+    type: text_textfield
+    weight: 58
+    region: content
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+  su_casbs_faculty_fellow_year:
+    type: entity_reference_autocomplete
+    weight: 60
+    region: content
+    settings:
+      match_operator: CONTAINS
+      match_limit: 10
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+  su_casbs_feature_people:
+    type: boolean_checkbox
+    weight: 61
+    region: content
+    settings:
+      display_label: true
+    third_party_settings: {  }
+  su_casbs_feature_people_text:
+    type: text_textarea
+    weight: 64
+    region: content
+    settings:
+      rows: 5
+      placeholder: ''
+    third_party_settings: {  }
+  su_casbs_fellowship_affili:
+    type: text_textfield
+    weight: 62
+    region: content
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+  su_casbs_fellowship_year:
+    type: entity_reference_autocomplete
+    weight: 63
+    region: content
+    settings:
+      match_operator: CONTAINS
+      match_limit: 10
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+  su_casbs_field_discipline:
+    type: text_textfield
+    weight: 59
+    region: content
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+  su_casbs_person_bio:
+    type: text_textarea
+    weight: 56
+    region: content
+    settings:
+      rows: 5
+      placeholder: ''
+    third_party_settings: {  }
+  su_casbs_person_book_links:
+    type: text_textarea
+    weight: 54
+    region: content
+    settings:
+      rows: 5
+      placeholder: ''
+    third_party_settings: {  }
   su_casbs_person_id:
     type: number
     weight: 53
     region: content
     settings:
+      placeholder: ''
+    third_party_settings: {  }
+  su_casbs_person_journal_links:
+    type: text_textarea
+    weight: 55
+    region: content
+    settings:
+      rows: 5
+      placeholder: ''
+    third_party_settings: {  }
+  su_casbs_practitioner_year:
+    type: entity_reference_autocomplete
+    weight: 65
+    region: content
+    settings:
+      match_operator: CONTAINS
+      match_limit: 10
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+  su_casbs_profile_picture:
+    type: image_image
+    weight: 66
+    region: content
+    settings:
+      progress_indicator: throbber
+      preview_image_style: thumbnail
+    third_party_settings: {  }
+  su_casbs_ra_year:
+    type: entity_reference_autocomplete
+    weight: 67
+    region: content
+    settings:
+      match_operator: CONTAINS
+      match_limit: 10
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+  su_casbs_visiting_scholar_year:
+    type: entity_reference_autocomplete
+    weight: 68
+    region: content
+    settings:
+      match_operator: CONTAINS
+      match_limit: 10
+      size: 60
       placeholder: ''
     third_party_settings: {  }
   su_metatags:
