--- a/docroot/profiles/custom/stanford_profile/config/sync/node.type.casbs_book.yml
+++ b/docroot/profiles/custom/stanford_profile/config/sync/node.type.casbs_book.yml
@@ -1,38 +1,32 @@
-uuid: 89a5085d-2a80-4eaa-a971-b82008143f8f
+uuid: f8b2e2f9-8fa6-4e64-98aa-2b2cba3d7fbf
 langcode: en
 status: true
 dependencies:
   module:
     - menu_ui
-    - node_revision_delete
     - scheduler
 third_party_settings:
   menu_ui:
     available_menus:
       - main
-      - stanford-person-type
     parent: 'main:'
-  node_revision_delete:
-    minimum_revisions_to_keep: 5
-    minimum_age_to_delete: 0
-    when_to_delete: 0
   scheduler:
     expand_fieldset: when_required
     fields_display_mode: vertical_tab
-    publish_enable: true
+    publish_enable: false
     publish_past_date: error
     publish_past_date_created: false
     publish_required: false
     publish_revision: false
     publish_touch: false
-    show_message_after_update: false
+    show_message_after_update: true
     unpublish_enable: false
     unpublish_required: false
     unpublish_revision: false
-name: Person
-type: stanford_person
-description: "Stanford Person type with bio and supporting information. Content-type for syncing with CAP data.\r\nFor CASBS - few of the people will be Stanford people"
+name: 'casbs book'
+type: casbs_book
+description: "Books in CASBS Tyler collection - not using Stanford publications because of additional casbs specific fields like publisher, image, and references to people/authors(fellows and visiting scholars)\r\nThe book content type maintains information about CASBS (Tyler, Tyler Oversize, Current Fellows, Honorary Tyler) books."
 help: ''
 new_revision: true
-preview_mode: 0
-display_submitted: false
+preview_mode: 1
+display_submitted: true
