make years multi-value, remove field su_casbs_fellowship_association, change person su_faculty_fellow_year to correct taxonomy

--- a/docroot/profiles/custom/stanford_profile/config/sync/core.entity_form_display.node.stanford_person.default.yml
+++ b/docroot/profiles/custom/stanford_profile/config/sync/core.entity_form_display.node.stanford_person.default.yml
@@ -11,13 +11,13 @@ dependencies:
     - field.field.node.stanford_person.su_casbs_faculty_fellow_year
     - field.field.node.stanford_person.su_casbs_feature_people
     - field.field.node.stanford_person.su_casbs_feature_people_text
-    - field.field.node.stanford_person.su_casbs_fellowship_affili
     - field.field.node.stanford_person.su_casbs_fellowship_year
     - field.field.node.stanford_person.su_casbs_field_discipline
     - field.field.node.stanford_person.su_casbs_person_bio
     - field.field.node.stanford_person.su_casbs_person_book_links
     - field.field.node.stanford_person.su_casbs_person_id
     - field.field.node.stanford_person.su_casbs_person_journal_links
+    - field.field.node.stanford_person.su_casbs_person_type
     - field.field.node.stanford_person.su_casbs_practitioner_year
     - field.field.node.stanford_person.su_casbs_profile_picture
     - field.field.node.stanford_person.su_casbs_ra_year
@@ -233,14 +233,6 @@ content:
       rows: 5
       placeholder: ''
     third_party_settings: {  }
-  su_casbs_fellowship_affili:
-    type: text_textfield
-    weight: 62
-    region: content
-    settings:
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
   su_casbs_fellowship_year:
     type: entity_reference_autocomplete
     weight: 63
@@ -288,6 +280,16 @@ content:
     region: content
     settings:
       rows: 5
+      placeholder: ''
+    third_party_settings: {  }
+  su_casbs_person_type:
+    type: entity_reference_autocomplete
+    weight: 69
+    region: content
+    settings:
+      match_operator: CONTAINS
+      match_limit: 10
+      size: 60
       placeholder: ''
     third_party_settings: {  }
   su_casbs_practitioner_year:
