--- a/docroot/profiles/custom/stanford_profile/config/sync/core.entity_view_display.node.stanford_person.default.yml
+++ b/docroot/profiles/custom/stanford_profile/config/sync/core.entity_view_display.node.stanford_person.default.yml
@@ -12,13 +12,13 @@ dependencies:
     - field.field.node.stanford_person.su_casbs_faculty_fellow_year
     - field.field.node.stanford_person.su_casbs_feature_people
     - field.field.node.stanford_person.su_casbs_feature_people_text
-    - field.field.node.stanford_person.su_casbs_fellowship_affili
     - field.field.node.stanford_person.su_casbs_fellowship_year
     - field.field.node.stanford_person.su_casbs_field_discipline
     - field.field.node.stanford_person.su_casbs_person_bio
     - field.field.node.stanford_person.su_casbs_person_book_links
     - field.field.node.stanford_person.su_casbs_person_id
     - field.field.node.stanford_person.su_casbs_person_journal_links
+    - field.field.node.stanford_person.su_casbs_person_type
     - field.field.node.stanford_person.su_casbs_practitioner_year
     - field.field.node.stanford_person.su_casbs_profile_picture
     - field.field.node.stanford_person.su_casbs_ra_year
@@ -391,21 +391,6 @@ third_party_settings:
                 third_party_settings: {  }
             weight: 7
             additional: {  }
-          7416b869-2ea1-45ab-8f97-599ad443b429:
-            uuid: 7416b869-2ea1-45ab-8f97-599ad443b429
-            region: content
-            configuration:
-              id: 'field_block:node:stanford_person:su_casbs_fellowship_affili'
-              label_display: '0'
-              context_mapping:
-                entity: layout_builder.entity
-              formatter:
-                type: text_default
-                label: above
-                settings: {  }
-                third_party_settings: {  }
-            weight: 8
-            additional: {  }
           63db56cf-efbb-4ea4-90fc-51583d074d1e:
             uuid: 63db56cf-efbb-4ea4-90fc-51583d074d1e
             region: content
@@ -503,6 +488,22 @@ third_party_settings:
                   link: true
                 third_party_settings: {  }
             weight: 14
+            additional: {  }
+          ccdc8e2c-dbf8-4fd0-8e66-21f622dd171c:
+            uuid: ccdc8e2c-dbf8-4fd0-8e66-21f622dd171c
+            region: content
+            configuration:
+              id: 'field_block:node:stanford_person:su_casbs_person_type'
+              label_display: '0'
+              context_mapping:
+                entity: layout_builder.entity
+              formatter:
+                type: entity_reference_label
+                label: above
+                settings:
+                  link: true
+                third_party_settings: {  }
+            weight: 15
             additional: {  }
         third_party_settings: {  }
       -
@@ -1037,13 +1038,6 @@ content:
     third_party_settings: {  }
     weight: 139
     region: content
-  su_casbs_fellowship_affili:
-    type: text_default
-    label: above
-    settings: {  }
-    third_party_settings: {  }
-    weight: 137
-    region: content
   su_casbs_fellowship_year:
     type: entity_reference_label
     label: above
@@ -1088,6 +1082,14 @@ content:
     settings: {  }
     third_party_settings: {  }
     weight: 130
+    region: content
+  su_casbs_person_type:
+    type: entity_reference_label
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    weight: 144
     region: content
   su_casbs_practitioner_year:
     type: entity_reference_label
