--- a/docroot/profiles/custom/stanford_profile/config/sync/core.entity_view_display.node.stanford_person.search_indexing.yml
+++ b/docroot/profiles/custom/stanford_profile/config/sync/core.entity_view_display.node.stanford_person.search_indexing.yml
@@ -12,13 +12,13 @@ dependencies:
     - field.field.node.stanford_person.su_casbs_faculty_fellow_year
     - field.field.node.stanford_person.su_casbs_feature_people
     - field.field.node.stanford_person.su_casbs_feature_people_text
-    - field.field.node.stanford_person.su_casbs_fellowship_affili
     - field.field.node.stanford_person.su_casbs_fellowship_year
     - field.field.node.stanford_person.su_casbs_field_discipline
     - field.field.node.stanford_person.su_casbs_person_bio
     - field.field.node.stanford_person.su_casbs_person_book_links
     - field.field.node.stanford_person.su_casbs_person_id
     - field.field.node.stanford_person.su_casbs_person_journal_links
+    - field.field.node.stanford_person.su_casbs_person_type
     - field.field.node.stanford_person.su_casbs_practitioner_year
     - field.field.node.stanford_person.su_casbs_profile_picture
     - field.field.node.stanford_person.su_casbs_ra_year
@@ -287,13 +287,13 @@ hidden:
   su_casbs_faculty_fellow_year: true
   su_casbs_feature_people: true
   su_casbs_feature_people_text: true
-  su_casbs_fellowship_affili: true
   su_casbs_fellowship_year: true
   su_casbs_field_discipline: true
   su_casbs_person_bio: true
   su_casbs_person_book_links: true
   su_casbs_person_id: true
   su_casbs_person_journal_links: true
+  su_casbs_person_type: true
   su_casbs_practitioner_year: true
   su_casbs_profile_picture: true
   su_casbs_ra_year: true
