--- a/docroot/profiles/custom/stanford_profile/config/sync/field.field.node.stanford_person.su_casbs_faculty_fellow_year.yml
+++ b/docroot/profiles/custom/stanford_profile/config/sync/field.field.node.stanford_person.su_casbs_faculty_fellow_year.yml
@@ -5,7 +5,7 @@ dependencies:
   config:
     - field.storage.node.su_casbs_faculty_fellow_year
     - node.type.stanford_person
-    - taxonomy.vocabulary.su_casbs_fellowship_year
+    - taxonomy.vocabulary.su_casbs_faculty_fellow_year
 id: node.stanford_person.su_casbs_faculty_fellow_year
 field_name: su_casbs_faculty_fellow_year
 entity_type: node
@@ -20,10 +20,10 @@ settings:
   handler: 'default:taxonomy_term'
   handler_settings:
     target_bundles:
-      su_casbs_fellowship_year: su_casbs_fellowship_year
+      su_casbs_faculty_fellow_year: su_casbs_faculty_fellow_year
     sort:
       field: name
       direction: asc
     auto_create: false
-    auto_create_bundle: ''
+    auto_create_bundle: su_casbs_faculty_fellow_year
 field_type: entity_reference
