--- a/docroot/profiles/custom/stanford_profile/config/sync/field.field.node.stanford_person.su_casbs_profile_picture.yml
+++ b/docroot/profiles/custom/stanford_profile/config/sync/field.field.node.stanford_person.su_casbs_profile_picture.yml
@@ -26,11 +26,11 @@ settings:
   max_resolution: ''
   min_resolution: ''
   alt_field: true
-  alt_field_required: true
+  alt_field_required: false
   title_field: false
   title_field_required: false
   default_image:
-    uuid: a940f1af-6b53-4ac6-bcad-4965e3f57bc4
+    uuid: ''
     alt: ''
     title: ''
     width: 300
