--- a/docroot/profiles/custom/stanford_profile/config/sync/simplesamlphp_auth.settings.yml
+++ b/docroot/profiles/custom/stanford_profile/config/sync/simplesamlphp_auth.settings.yml
@@ -14,7 +14,7 @@ role:
   eval_every_time: 2
 register_users: true
 allow:
-  set_drupal_pwd: false
+  set_drupal_pwd: true
   default_login: true
   default_login_roles:
     administrator: administrator
@@ -26,7 +26,7 @@ user_register_original: visitors_admin_approval
 sync:
   mail: true
   user_name: true
-autoenablesaml: true
+autoenablesaml: false
 debug: false
 secure: true
 httponly: false
