--- a/docroot/profiles/custom/stanford_profile/config/sync/core.entity_view_display.node.casbs_book.full.yml
+++ b/docroot/profiles/custom/stanford_profile/config/sync/core.entity_view_display.node.casbs_book.full.yml
@@ -1,8 +1,9 @@
-uuid: 4ed7d207-1bf3-457c-8009-22ca009148ca
+uuid: 5ccc5ddd-4168-48bc-ae6e-4519a5aa48ca
 langcode: en
 status: true
 dependencies:
   config:
+    - core.entity_view_mode.node.full
     - field.field.node.casbs_book.body
     - field.field.node.casbs_book.su_casbs_author_links
     - field.field.node.casbs_book.su_casbs_author_name
@@ -14,64 +15,45 @@ dependencies:
     - field.field.node.casbs_book.su_casbs_book_title
     - node.type.casbs_book
   module:
-    - ds
     - image
+    - layout_builder
     - text
     - user
 third_party_settings:
-  ds:
-    layout:
-      id: defaults
-      library: null
-      disable_css: false
-      entity_classes: all_classes
-      settings:
-        label: ''
-        extra_classes: ''
-        centered: centered-container
-        columns: default
-    regions:
-      main:
-        - links
-        - body
-        - su_casbs_author_name
-        - su_casbs_author_links
-        - su_casbs_book_cover
-        - su_casbs_book_title
-        - su_casbs_book_publisher
-        - su_casbs_book_publisher_loc
-        - su_casbs_book_publish_year
-id: node.casbs_book.default
+  layout_builder:
+    enabled: false
+    allow_custom: false
+id: node.casbs_book.full
 targetEntityType: node
 bundle: casbs_book
-mode: default
+mode: full
 content:
   body:
     type: text_default
     label: hidden
     settings: {  }
     third_party_settings: {  }
-    weight: 1
-    region: main
+    weight: 101
+    region: content
   links:
     settings: {  }
     third_party_settings: {  }
-    weight: 0
-    region: main
+    weight: 100
+    region: content
   su_casbs_author_links:
     type: text_default
     label: hidden
     settings: {  }
     third_party_settings: {  }
-    weight: 3
-    region: main
+    weight: 103
+    region: content
   su_casbs_author_name:
     type: text_default
     label: above
     settings: {  }
     third_party_settings: {  }
-    weight: 2
-    region: main
+    weight: 102
+    region: content
   su_casbs_book_cover:
     type: image
     label: hidden
@@ -81,36 +63,44 @@ content:
       image_loading:
         attribute: lazy
     third_party_settings: {  }
-    weight: 4
-    region: main
+    weight: 104
+    region: content
+  su_casbs_book_id:
+    type: number_integer
+    label: above
+    settings:
+      thousand_separator: ''
+      prefix_suffix: true
+    third_party_settings: {  }
+    weight: 106
+    region: content
   su_casbs_book_publish_year:
     type: text_default
     label: above
     settings: {  }
     third_party_settings: {  }
-    weight: 8
-    region: main
+    weight: 109
+    region: content
   su_casbs_book_publisher:
     type: text_default
     label: above
     settings: {  }
     third_party_settings: {  }
-    weight: 6
-    region: main
+    weight: 107
+    region: content
   su_casbs_book_publisher_loc:
     type: text_default
     label: above
     settings: {  }
     third_party_settings: {  }
-    weight: 7
-    region: main
+    weight: 108
+    region: content
   su_casbs_book_title:
     type: text_default
-    label: hidden
+    label: above
     settings: {  }
     third_party_settings: {  }
-    weight: 5
-    region: main
+    weight: 105
+    region: content
 hidden:
   search_api_excerpt: true
-  su_casbs_book_id: true
