--- a/docroot/profiles/custom/stanford_profile/config/sync/field.field.node.casbs_book.su_casbs_book_publish_year.yml
+++ b/docroot/profiles/custom/stanford_profile/config/sync/field.field.node.casbs_book.su_casbs_book_publish_year.yml
@@ -15,7 +15,7 @@ id: node.casbs_book.su_casbs_book_publish_year
 field_name: su_casbs_book_publish_year
 entity_type: node
 bundle: casbs_book
-label: casbs_book_publish_year
+label: 'Published Year'
 description: ''
 required: false
 translatable: false
