--- a/docroot/profiles/custom/stanford_profile/config/sync/node.type.casbs_book.yml
+++ b/docroot/profiles/custom/stanford_profile/config/sync/node.type.casbs_book.yml
@@ -29,4 +29,4 @@ description: "Books in CASBS Tyler collection - not using Stanford publications 
 help: ''
 new_revision: true
 preview_mode: 1
-display_submitted: true
+display_submitted: false
