try to remove fellowship_year again, add mailcode sort to casbs board view

--- a/docroot/profiles/custom/stanford_profile/config/sync/views.view.casbs_board.yml
+++ b/docroot/profiles/custom/stanford_profile/config/sync/views.view.casbs_board.yml
@@ -481,6 +481,7 @@ display:
     display_plugin: block
     position: 1
     display_options:
+      display_comment: 'Using mailcode to sort display'
       display_extenders: {  }
       block_description: casbs_board
       block_category: 'Basic Page Type Lists (Views)'
