--- a/docroot/profiles/custom/stanford_profile/config/sync/views.view.casbs_staff.yml
+++ b/docroot/profiles/custom/stanford_profile/config/sync/views.view.casbs_staff.yml
@@ -113,22 +113,19 @@ display:
         options: {  }
       empty: {  }
       sorts:
-        created:
-          id: created
-          table: node_field_data
-          field: created
+        su_person_mail_code_value:
+          id: su_person_mail_code_value
+          table: node__su_person_mail_code
+          field: su_person_mail_code_value
           relationship: none
           group_type: group
           admin_label: ''
-          entity_type: node
-          entity_field: created
-          plugin_id: date
-          order: DESC
+          plugin_id: standard
+          order: ASC
           expose:
             label: ''
             field_identifier: ''
           exposed: false
-          granularity: second
       arguments: {  }
       filters:
         status:
