modify casbs_staff view

--- a/docroot/profiles/custom/stanford_profile/config/sync/views.view.casbs_staff.yml
+++ b/docroot/profiles/custom/stanford_profile/config/sync/views.view.casbs_staff.yml
@@ -7,11 +7,13 @@ dependencies:
     - field.storage.node.su_casbs_field_discipline
     - field.storage.node.su_casbs_person_bio
     - field.storage.node.su_casbs_profile_picture
+    - field.storage.node.su_person_email
+    - field.storage.node.su_person_telephone
     - taxonomy.vocabulary.su_casbs_people_type
   content:
     - 'taxonomy_term:su_casbs_people_type:5a6dfdf0-d508-44e0-ab03-71189b4aa58a'
   module:
-    - image
+    - element_class_formatter
     - node
     - taxonomy
     - text
@@ -32,6 +34,73 @@ display:
     display_options:
       title: casbs_staff
       fields:
+        su_casbs_profile_picture:
+          id: su_casbs_profile_picture
+          table: node__su_casbs_profile_picture
+          field: su_casbs_profile_picture
+          relationship: none
+          group_type: group
+          admin_label: ''
+          plugin_id: field
+          label: ''
+          exclude: false
+          alter:
+            alter_text: false
+            text: '<figure>{{ su_casbs_profile_picture }}</figure>'
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: target_id
+          type: image_class
+          settings:
+            image_link: ''
+            image_style: ''
+            class: 'float: left;'
+            image_loading:
+              attribute: lazy
+          group_column: ''
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
         title:
           id: title
           table: node_field_data
@@ -95,10 +164,10 @@ display:
           multi_type: separator
           separator: ', '
           field_api_classes: false
-        su_casbs_profile_picture:
-          id: su_casbs_profile_picture
-          table: node__su_casbs_profile_picture
-          field: su_casbs_profile_picture
+        su_person_email:
+          id: su_person_email
+          table: node__su_person_email
+          field: su_person_email
           relationship: none
           group_type: group
           admin_label: ''
@@ -144,14 +213,73 @@ display:
           hide_empty: false
           empty_zero: false
           hide_alter_empty: true
-          click_sort_column: target_id
-          type: image
+          click_sort_column: value
+          type: basic_string
+          settings: {  }
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+        su_person_telephone:
+          id: su_person_telephone
+          table: node__su_person_telephone
+          field: su_person_telephone
+          relationship: none
+          group_type: group
+          admin_label: ''
+          plugin_id: field
+          label: ''
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: string
           settings:
-            image_link: ''
-            image_style: ''
-            image_loading:
-              attribute: lazy
-          group_column: ''
+            link_to_entity: false
+          group_column: value
           group_columns: {  }
           group_rows: true
           delta_limit: 0
@@ -447,6 +575,10 @@ display:
           error_message: true
       style:
         type: default
+        options:
+          grouping: {  }
+          row_class: ''
+          default_row_class: true
       row:
         type: fields
       query:
@@ -475,6 +607,8 @@ display:
         - 'config:field.storage.node.su_casbs_field_discipline'
         - 'config:field.storage.node.su_casbs_person_bio'
         - 'config:field.storage.node.su_casbs_profile_picture'
+        - 'config:field.storage.node.su_person_email'
+        - 'config:field.storage.node.su_person_telephone'
   block_1:
     id: block_1
     display_title: Block
@@ -496,3 +630,5 @@ display:
         - 'config:field.storage.node.su_casbs_field_discipline'
         - 'config:field.storage.node.su_casbs_person_bio'
         - 'config:field.storage.node.su_casbs_profile_picture'
+        - 'config:field.storage.node.su_person_email'
+        - 'config:field.storage.node.su_person_telephone'
