--- a/docroot/profiles/custom/stanford_profile/config/sync/core.entity_view_display.node.stanford_person.default.yml
+++ b/docroot/profiles/custom/stanford_profile/config/sync/core.entity_view_display.node.stanford_person.default.yml
@@ -220,7 +220,7 @@ third_party_settings:
                 third_party_settings:
                   field_formatter_class:
                     class: ''
-            weight: 2
+            weight: 3
             additional: {  }
           a396af0e-0034-42a9-94b8-8744e157c175:
             uuid: a396af0e-0034-42a9-94b8-8744e157c175
@@ -275,8 +275,8 @@ third_party_settings:
             region: quote_long_title
             configuration:
               id: 'field_block:node:stanford_person:su_casbs_current_affiliation'
-              label: casbs_current_affiliation
-              label_display: '0'
+              label: 'Current Affiliation'
+              label_display: visible
               provider: layout_builder
               context_mapping:
                 entity: layout_builder.entity
@@ -290,29 +290,7 @@ third_party_settings:
                     handler: ''
                   field_formatter_class:
                     class: ''
-            weight: 1
-            additional: {  }
-          3c7a5621-2806-4572-9c86-0ad5044841d6:
-            uuid: 3c7a5621-2806-4572-9c86-0ad5044841d6
-            region: quote_long_title
-            configuration:
-              id: 'field_block:node:stanford_person:su_casbs_field_discipline'
-              label: casbs_field_discipline
-              label_display: '0'
-              provider: layout_builder
-              context_mapping:
-                entity: layout_builder.entity
-                view_mode: view_mode
-              formatter:
-                type: text_default
-                label: hidden
-                settings: {  }
-                third_party_settings:
-                  empty_fields:
-                    handler: ''
-                  field_formatter_class:
-                    class: ''
-            weight: 0
+            weight: 2
             additional: {  }
           9fd1c5fc-eeda-42c7-bf98-47ccbc3e4365:
             uuid: 9fd1c5fc-eeda-42c7-bf98-47ccbc3e4365
@@ -337,7 +315,7 @@ third_party_settings:
                     handler: ''
                   field_formatter_class:
                     class: ''
-            weight: 4
+            weight: 5
             additional: {  }
           fe7cc313-100a-4a83-9c19-deb3b963c536:
             uuid: fe7cc313-100a-4a83-9c19-deb3b963c536
@@ -362,7 +340,7 @@ third_party_settings:
                     handler: ''
                   field_formatter_class:
                     class: ''
-            weight: 6
+            weight: 7
             additional: {  }
           38314b41-b8da-4725-90ec-99a42cd4abba:
             uuid: 38314b41-b8da-4725-90ec-99a42cd4abba
@@ -387,7 +365,7 @@ third_party_settings:
                     handler: ''
                   field_formatter_class:
                     class: ''
-            weight: 5
+            weight: 6
             additional: {  }
           e71c6641-8871-4ba8-978e-32bc43603491:
             uuid: e71c6641-8871-4ba8-978e-32bc43603491
@@ -412,7 +390,7 @@ third_party_settings:
                     handler: ''
                   field_formatter_class:
                     class: ''
-            weight: 7
+            weight: 8
             additional: {  }
           776cfd87-0ce2-42a4-b5f4-f2344e36adef:
             uuid: 776cfd87-0ce2-42a4-b5f4-f2344e36adef
@@ -437,7 +415,7 @@ third_party_settings:
                     handler: ''
                   field_formatter_class:
                     class: ''
-            weight: 8
+            weight: 9
             additional: {  }
           d69f9571-19ad-4732-aeb0-abc445b079da:
             uuid: d69f9571-19ad-4732-aeb0-abc445b079da
@@ -461,21 +439,6 @@ third_party_settings:
                     class: ''
             weight: 2
             additional: {  }
-          989c551d-9610-48b4-b7a5-d43e58873f6b:
-            uuid: 989c551d-9610-48b4-b7a5-d43e58873f6b
-            region: content
-            configuration:
-              id: 'field_block:node:stanford_person:su_casbs_feature_people_text'
-              label_display: '0'
-              context_mapping:
-                entity: layout_builder.entity
-              formatter:
-                type: text_default
-                label: above
-                settings: {  }
-                third_party_settings: {  }
-            weight: 4
-            additional: {  }
           1cab0e05-0960-4b0e-83cf-8e42c26a0c56:
             uuid: 1cab0e05-0960-4b0e-83cf-8e42c26a0c56
             region: content
@@ -498,21 +461,50 @@ third_party_settings:
                     class: ''
             weight: 1
             additional: {  }
-          dab65726-84f4-4ca5-911a-c5f99c983652:
-            uuid: dab65726-84f4-4ca5-911a-c5f99c983652
-            region: content
+          77d33548-2158-4c4a-a401-941916c5072d:
+            uuid: 77d33548-2158-4c4a-a401-941916c5072d
+            region: quote_long_title
             configuration:
               id: 'field_block:node:stanford_person:su_casbs_fellow_year'
-              label_display: '0'
+              label: Fellow
+              label_display: visible
+              provider: layout_builder
               context_mapping:
                 entity: layout_builder.entity
+                view_mode: view_mode
               formatter:
                 type: entity_reference_label
-                label: above
+                label: hidden
                 settings:
-                  link: true
-                third_party_settings: {  }
-            weight: 5
+                  link: false
+                third_party_settings:
+                  empty_fields:
+                    handler: ''
+                  field_formatter_class:
+                    class: ''
+            weight: 4
+            additional: {  }
+          3c7a5621-2806-4572-9c86-0ad5044841d6:
+            uuid: 3c7a5621-2806-4572-9c86-0ad5044841d6
+            region: quote_long_title
+            configuration:
+              id: 'field_block:node:stanford_person:su_casbs_field_discipline'
+              label: Discipline
+              label_display: visible
+              provider: layout_builder
+              context_mapping:
+                entity: layout_builder.entity
+                view_mode: view_mode
+              formatter:
+                type: text_default
+                label: hidden
+                settings: {  }
+                third_party_settings:
+                  empty_fields:
+                    handler: ''
+                  field_formatter_class:
+                    class: ''
+            weight: 1
             additional: {  }
         third_party_settings: {  }
       -
@@ -613,27 +605,6 @@ third_party_settings:
                   field_formatter_class:
                     class: su-person-location-name
             weight: 6
-            additional: {  }
-          8222e428-abc1-40e2-9309-e6ca03530c1f:
-            uuid: 8222e428-abc1-40e2-9309-e6ca03530c1f
-            region: right
-            configuration:
-              id: 'field_block:node:stanford_person:su_person_mail_code'
-              label: 'Mail Code'
-              label_display: '0'
-              provider: layout_builder
-              context_mapping:
-                entity: layout_builder.entity
-                view_mode: view_mode
-              formatter:
-                type: string
-                label: above
-                settings:
-                  link_to_entity: false
-                third_party_settings:
-                  field_formatter_class:
-                    class: su-person-mail-code
-            weight: 5
             additional: {  }
           0cff0fa4-edcc-4bae-93bf-865242051b35:
             uuid: 0cff0fa4-edcc-4bae-93bf-865242051b35
