--- a/docroot/profiles/custom/stanford_profile/config/sync/core.entity_view_display.node.casbs_book.default.yml
+++ b/docroot/profiles/custom/stanford_profile/config/sync/core.entity_view_display.node.casbs_book.default.yml
@@ -12,6 +12,7 @@ dependencies:
     - field.field.node.casbs_book.su_casbs_book_publisher
     - field.field.node.casbs_book.su_casbs_book_publisher_loc
     - field.field.node.casbs_book.su_casbs_book_title
+    - field.field.node.casbs_book.su_casbs_recent_works
     - node.type.casbs_book
   module:
     - ds
@@ -111,6 +112,16 @@ content:
     third_party_settings: {  }
     weight: 5
     region: main
+  su_casbs_recent_works:
+    type: boolean
+    label: above
+    settings:
+      format: default
+      format_custom_false: ''
+      format_custom_true: ''
+    third_party_settings: {  }
+    weight: 9
+    region: content
 hidden:
   search_api_excerpt: true
   su_casbs_book_id: true
