--- a/docroot/profiles/custom/stanford_profile/config/sync/core.entity_view_display.node.casbs_book.full.yml
+++ b/docroot/profiles/custom/stanford_profile/config/sync/core.entity_view_display.node.casbs_book.full.yml
@@ -13,6 +13,7 @@ dependencies:
     - field.field.node.casbs_book.su_casbs_book_publisher
     - field.field.node.casbs_book.su_casbs_book_publisher_loc
     - field.field.node.casbs_book.su_casbs_book_title
+    - field.field.node.casbs_book.su_casbs_recent_works
     - node.type.casbs_book
   module:
     - image
@@ -104,3 +105,4 @@ content:
     region: content
 hidden:
   search_api_excerpt: true
+  su_casbs_recent_works: true
