--- a/docroot/profiles/custom/stanford_profile/config/sync/field.field.paragraph.stanford_lists.su_list_view.yml
+++ b/docroot/profiles/custom/stanford_profile/config/sync/field.field.paragraph.stanford_lists.su_list_view.yml
@@ -20,30 +20,38 @@ default_value_callback: ''
 settings:
   force_default: false
   allowed_views:
+    stanford_shared_tags: stanford_shared_tags
     stanford_basic_pages: stanford_basic_pages
+    casbs_board_of_directors: casbs_board_of_directors
+    casbs_current_faculty_fellows_and_research_affiliates: casbs_current_faculty_fellows_and_research_affiliates
+    casbs_current_fellows: casbs_current_fellows
+    casbs_current_visiting_scholars: casbs_current_visiting_scholars
+    casbs_recentworks: casbs_recentworks
+    casbs_staff: casbs_staff
     stanford_courses: stanford_courses
     stanford_events: stanford_events
     stanford_news: stanford_news
     stanford_person: stanford_person
     stanford_publications: stanford_publications
-    stanford_shared_tags: stanford_shared_tags
     su_block_edit_links: '0'
+    _book_mosaic: '0'
+    casbs_book_mosaic: '0'
+    casbs_recentworks_mosaic: '0'
+    change_logs: '0'
     content: '0'
     block_content: '0'
     stanford_events_past: '0'
     stanford_events_schedule: '0'
     stanford_event_series: '0'
-    stanford_event_terms_utility: '0'
+    authmap: '0'
     files: '0'
     locked_content: '0'
     media: '0'
     media_library: '0'
-    stanford_news_terms: '0'
-    stanford_person_list_terms_first: '0'
-    stanford_person_terms: '0'
-    publication_terms: '0'
+    policies: '0'
     redirect: '0'
     search: '0'
+    taxonomy_term_pages: '0'
     user_admin_people: '0'
   allowed_display_types:
     viewfield_block: viewfield_block
