--- a/docroot/profiles/custom/stanford_profile/config/sync/views.view.casbs_current_faculty_fellows_and_research_affiliates.yml
+++ b/docroot/profiles/custom/stanford_profile/config/sync/views.view.casbs_current_faculty_fellows_and_research_affiliates.yml
@@ -10,12 +10,10 @@ dependencies:
     - image.style.medium
     - taxonomy.vocabulary.su_casbs_faculty_fellow_year
     - taxonomy.vocabulary.su_casbs_research_affiliate_year
-  content:
-    - 'taxonomy_term:su_casbs_faculty_fellow_year:3346625b-869e-453e-abb6-fb8eec1ec654'
-    - 'taxonomy_term:su_casbs_research_affiliate_year:6e48fae3-54ea-4e64-b498-ff81001751fb'
   module:
     - image
     - node
+    - stanford_fields
     - taxonomy
     - text
     - user
@@ -72,13 +70,13 @@ display:
             trim: false
             preserve_tags: ''
             html: false
-          element_type: ''
-          element_class: ''
+          element_type: div
+          element_class: 'media image field-media-image'
           element_label_type: ''
           element_label_class: ''
           element_label_colon: false
-          element_wrapper_type: ''
-          element_wrapper_class: ''
+          element_wrapper_type: div
+          element_wrapper_class: 'align-left media-entity-wrapper image'
           element_default_classes: true
           empty: ''
           hide_empty: false
@@ -140,7 +138,7 @@ display:
             trim: false
             preserve_tags: ''
             html: false
-          element_type: ''
+          element_type: h2
           element_class: ''
           element_label_type: ''
           element_label_class: ''
@@ -155,7 +153,7 @@ display:
           click_sort_column: value
           type: string
           settings:
-            link_to_entity: true
+            link_to_entity: false
           group_column: value
           group_columns: {  }
           group_rows: true
@@ -388,19 +386,70 @@ display:
             label: ''
             field_identifier: ''
           exposed: false
-      arguments: {  }
+      arguments:
+        name:
+          id: name
+          table: taxonomy_term_field_data
+          field: name
+          relationship: term_node_tid
+          group_type: group
+          admin_label: ''
+          entity_type: taxonomy_term
+          entity_field: name
+          plugin_id: string
+          default_action: default
+          exception:
+            value: all
+            title_enable: false
+            title: All
+          title_enable: false
+          title: ''
+          default_argument_type: raw
+          default_argument_options:
+            index: 0
+            use_alias: false
+          default_argument_skip_url: false
+          summary_options:
+            base_path: ''
+            count: true
+            override: false
+            items_per_page: 25
+          summary:
+            sort_order: asc
+            number_of_records: 0
+            format: default_summary
+          specify_validation: true
+          validate:
+            type: taxonomy_term_name
+            fail: 'not found'
+          validate_options:
+            bundles:
+              su_casbs_faculty_fellow_year: su_casbs_faculty_fellow_year
+              su_casbs_research_affiliate_year: su_casbs_research_affiliate_year
+            access: false
+            operation: view
+            transform: false
+          glossary: false
+          limit: 0
+          case: none
+          path_case: none
+          transform_dash: false
+          break_phrase: false
+          add_table: false
+          require_value: false
       filters:
-        su_casbs_faculty_fellow_year_target_id:
-          id: su_casbs_faculty_fellow_year_target_id
-          table: node__su_casbs_faculty_fellow_year
-          field: su_casbs_faculty_fellow_year_target_id
+        status:
+          id: status
+          table: node_field_data
+          field: status
           relationship: none
           group_type: group
           admin_label: ''
-          plugin_id: taxonomy_index_tid
-          operator: or
-          value:
-            - 2436
+          entity_type: node
+          entity_field: status
+          plugin_id: boolean
+          operator: '='
+          value: '1'
           group: 1
           exposed: false
           expose:
@@ -417,7 +466,6 @@ display:
             multiple: false
             remember_roles:
               authenticated: authenticated
-            reduce: false
           is_grouped: false
           group_info:
             label: ''
@@ -430,58 +478,6 @@ display:
             default_group: All
             default_group_multiple: {  }
             group_items: {  }
-          reduce_duplicates: true
-          vid: su_casbs_faculty_fellow_year
-          type: textfield
-          hierarchy: false
-          limit: true
-          error_message: true
-        su_casbs_ra_year_target_id:
-          id: su_casbs_ra_year_target_id
-          table: node__su_casbs_ra_year
-          field: su_casbs_ra_year_target_id
-          relationship: none
-          group_type: group
-          admin_label: ''
-          plugin_id: taxonomy_index_tid
-          operator: or
-          value:
-            - 566
-          group: 2
-          exposed: false
-          expose:
-            operator_id: ''
-            label: ''
-            description: ''
-            use_operator: false
-            operator: ''
-            operator_limit_selection: false
-            operator_list: {  }
-            identifier: ''
-            required: false
-            remember: false
-            multiple: false
-            remember_roles:
-              authenticated: authenticated
-            reduce: false
-          is_grouped: false
-          group_info:
-            label: ''
-            description: ''
-            identifier: ''
-            optional: true
-            widget: select
-            multiple: false
-            remember: false
-            default_group: All
-            default_group_multiple: {  }
-            group_items: {  }
-          reduce_duplicates: true
-          vid: su_casbs_research_affiliate_year
-          type: textfield
-          hierarchy: false
-          limit: true
-          error_message: true
       filter_groups:
         operator: OR
         groups:
@@ -500,7 +496,20 @@ display:
           replica: false
           query_tags: {  }
           contextual_filters_or: false
-      relationships: {  }
+      relationships:
+        term_node_tid:
+          id: term_node_tid
+          table: node_field_data
+          field: term_node_tid
+          relationship: none
+          group_type: group
+          admin_label: term
+          entity_type: node
+          plugin_id: node_term_data
+          required: true
+          vids:
+            - su_casbs_faculty_fellow_year
+            - su_casbs_research_affiliate_year
       header: {  }
       footer: {  }
       display_extenders: {  }
@@ -509,7 +518,7 @@ display:
       contexts:
         - 'languages:language_content'
         - 'languages:language_interface'
-        - user
+        - url
         - 'user.node_grants:view'
         - user.permissions
       tags:
@@ -517,10 +526,10 @@ display:
         - 'config:field.storage.node.su_casbs_field_discipline'
         - 'config:field.storage.node.su_casbs_person_bio'
         - 'config:field.storage.node.su_casbs_profile_picture'
-  block_1:
-    id: block_1
-    display_title: Block
-    display_plugin: block
+  viewfield_block_1:
+    id: viewfield_block_1
+    display_title: 'View Field Block'
+    display_plugin: viewfield_block
     position: 1
     display_options:
       display_extenders: {  }
@@ -530,7 +539,7 @@ display:
       contexts:
         - 'languages:language_content'
         - 'languages:language_interface'
-        - user
+        - url
         - 'user.node_grants:view'
         - user.permissions
       tags:
