--- a/docroot/profiles/custom/stanford_profile/config/sync/views.view.casbs_current_visiting_scholars.yml
+++ b/docroot/profiles/custom/stanford_profile/config/sync/views.view.casbs_current_visiting_scholars.yml
@@ -7,12 +7,12 @@ dependencies:
     - field.storage.node.su_casbs_field_discipline
     - field.storage.node.su_casbs_person_bio
     - field.storage.node.su_casbs_profile_picture
+    - image.style.medium
     - taxonomy.vocabulary.su_casbs_visiting_scholar_year
-  content:
-    - 'taxonomy_term:su_casbs_visiting_scholar_year:aa07ed82-6a1a-4dbd-b267-e383b014a379'
   module:
     - image
     - node
+    - stanford_fields
     - taxonomy
     - text
     - user
@@ -69,13 +69,13 @@ display:
             trim: false
             preserve_tags: ''
             html: false
-          element_type: ''
-          element_class: ''
+          element_type: div
+          element_class: 'media image field-media-image'
           element_label_type: ''
           element_label_class: ''
           element_label_colon: false
-          element_wrapper_type: ''
-          element_wrapper_class: ''
+          element_wrapper_type: div
+          element_wrapper_class: 'align-left media-entity-wrapper image'
           element_default_classes: true
           empty: ''
           hide_empty: false
@@ -85,7 +85,7 @@ display:
           type: image
           settings:
             image_link: ''
-            image_style: ''
+            image_style: medium
             image_loading:
               attribute: lazy
           group_column: ''
@@ -135,11 +135,11 @@ display:
             trim: false
             preserve_tags: ''
             html: false
-          element_type: ''
+          element_type: h2
           element_class: ''
           element_label_type: ''
           element_label_class: ''
-          element_label_colon: true
+          element_label_colon: false
           element_wrapper_type: ''
           element_wrapper_class: ''
           element_default_classes: true
@@ -150,7 +150,7 @@ display:
           click_sort_column: value
           type: string
           settings:
-            link_to_entity: true
+            link_to_entity: false
           group_column: value
           group_columns: {  }
           group_rows: true
@@ -383,7 +383,56 @@ display:
             label: ''
             field_identifier: ''
           exposed: false
-      arguments: {  }
+      arguments:
+        name:
+          id: name
+          table: taxonomy_term_field_data
+          field: name
+          relationship: term_node_tid
+          group_type: group
+          admin_label: ''
+          entity_type: taxonomy_term
+          entity_field: name
+          plugin_id: string
+          default_action: default
+          exception:
+            value: all
+            title_enable: false
+            title: All
+          title_enable: false
+          title: ''
+          default_argument_type: raw
+          default_argument_options:
+            index: 0
+            use_alias: false
+          default_argument_skip_url: false
+          summary_options:
+            base_path: ''
+            count: true
+            override: false
+            items_per_page: 25
+          summary:
+            sort_order: asc
+            number_of_records: 0
+            format: default_summary
+          specify_validation: true
+          validate:
+            type: taxonomy_term_name
+            fail: 'not found'
+          validate_options:
+            bundles:
+              su_casbs_visiting_scholar_year: su_casbs_visiting_scholar_year
+            access: false
+            operation: view
+            transform: false
+          glossary: false
+          limit: 0
+          case: none
+          path_case: none
+          transform_dash: false
+          break_phrase: false
+          add_table: false
+          require_value: false
       filters:
         status:
           id: status
@@ -398,52 +447,6 @@ display:
             operator: ''
             operator_limit_selection: false
             operator_list: {  }
-        su_casbs_visiting_scholar_year_target_id:
-          id: su_casbs_visiting_scholar_year_target_id
-          table: node__su_casbs_visiting_scholar_year
-          field: su_casbs_visiting_scholar_year_target_id
-          relationship: none
-          group_type: group
-          admin_label: ''
-          plugin_id: taxonomy_index_tid
-          operator: or
-          value:
-            - 936
-          group: 1
-          exposed: false
-          expose:
-            operator_id: ''
-            label: ''
-            description: ''
-            use_operator: false
-            operator: ''
-            operator_limit_selection: false
-            operator_list: {  }
-            identifier: ''
-            required: false
-            remember: false
-            multiple: false
-            remember_roles:
-              authenticated: authenticated
-            reduce: false
-          is_grouped: false
-          group_info:
-            label: ''
-            description: ''
-            identifier: ''
-            optional: true
-            widget: select
-            multiple: false
-            remember: false
-            default_group: All
-            default_group_multiple: {  }
-            group_items: {  }
-          reduce_duplicates: false
-          vid: su_casbs_visiting_scholar_year
-          type: textfield
-          hierarchy: false
-          limit: true
-          error_message: true
       style:
         type: default
         options:
@@ -461,7 +464,19 @@ display:
           replica: false
           query_tags: {  }
           contextual_filters_or: false
-      relationships: {  }
+      relationships:
+        term_node_tid:
+          id: term_node_tid
+          table: node_field_data
+          field: term_node_tid
+          relationship: none
+          group_type: group
+          admin_label: term
+          entity_type: node
+          plugin_id: node_term_data
+          required: false
+          vids:
+            - su_casbs_visiting_scholar_year
       header: {  }
       footer: {  }
       display_extenders: {  }
@@ -470,7 +485,7 @@ display:
       contexts:
         - 'languages:language_content'
         - 'languages:language_interface'
-        - user
+        - url
         - 'user.node_grants:view'
         - user.permissions
       tags:
@@ -478,10 +493,10 @@ display:
         - 'config:field.storage.node.su_casbs_field_discipline'
         - 'config:field.storage.node.su_casbs_person_bio'
         - 'config:field.storage.node.su_casbs_profile_picture'
-  block_1:
-    id: block_1
-    display_title: Block
-    display_plugin: block
+  viewfield_block_1:
+    id: viewfield_block_1
+    display_title: 'View Field Block'
+    display_plugin: viewfield_block
     position: 1
     display_options:
       display_extenders: {  }
@@ -491,7 +506,7 @@ display:
       contexts:
         - 'languages:language_content'
         - 'languages:language_interface'
-        - user
+        - url
         - 'user.node_grants:view'
         - user.permissions
       tags:
